Added fix for jvm memory issue